# ruckchat

./: .dockerignore  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  ISSUES.md  LICENSE  README.md  ROCKETCHAT_API_REFERENCE.md  TESTPLAN.md  docker-compose.build.yml  docker-compose.yml
.cargo/: config.toml
.serena/: project.yml
.sqlx/: query-022692404e964b8fc81002612b5b2f5a8255f4664f87f75d22a8a5b5f70ece89.json  query-083e89aef9d2543dd4ac686492aaa351b6676fa357f362fba84c66fb89752285.json  query-0858ce794e71c0c868134794b2770a5fb39635e623a445e6c68fe0a827551584.json  query-0864942d167462431ef85eda42fa76bdd78c435745b1d1d0955122874b950d12.json  query-08d50956429a0e0c082e9f7a3b36bc6e00024fd6147d8fb1845523a65e003272.json  query-0c8813be38c699991c18877efeb22732878f149fe1b6545fef23e626f2aeea31.json  query-0d854f0360f2495c726363e2f4b0f45e5a7084cf0955c651e3b1226a4548711e.json  query-0e639c39b00843bd8e4c2c65ea670ca0e7299cb1369b7703a00cbcb2dff2581d.json  query-12a296b00c7fad2da183bcbec8937c12a9abf68ba657cb03ebf21e45acc5c7ab.json  query-12a8547ac3e9e5e45466c2cbf34dd2251dd5e8233e9f00e2ab998150146ce9a1.json  query-184df84f4457734d1af0cb54e3e46fc73b8a119d6a528ce702058c82b5ec10f3.json  query-1b74e06ecfcb30b6546e75efabaa3674aad61f74d8ac7c49364734dd406cbc8a.json  query-1d98367697cbe22e87b2f0aae7a196361d64e69b8df6a36e15711b645ac60514.json  query-1f2383642cfcebcb9b664d10588ad0c28d60952ecc4840025c7788702a6e8e3c.json  query-218fcaae4fe2e981bdab2b578ec9945b6ba693fd6303a40f46ac496c8d88e8af.json  query-21b77708bc7a8427dfab4610dac6506add2c601bb28775b9193100765bcb6e44.json  query-2309459dbad6c93ac79322367fe43ebe708b73397a64c6d159ed06bde9ae63cd.json  query-240d8ce3a44fe13c67dfa44f7e39ceaf9886116d567494b10b197246342946b1.json  query-259ebbb3ddf9504b5bb985ecb0a7e81a30d0ec576a86911a88b35e65b86fb78a.json  query-25c1c2b78cd072c76b6f3fd8cdf1a05f5a48767a8ab8b343682ef734e4ee7d9d.json  (+113 more)
book/: 000-Vision.md  002-UX.md  (+18 more)
crates/rocketchat2ruckchat/: Cargo.toml  README.md
crates/rocketchat2ruckchat/src/: config.rs  error.rs  interactive.rs  lib.rs  main.rs  mapping.rs  pipeline.rs  report.rs  transform.rs
crates/rocketchat2ruckchat/src/rocket_chat/: auth.rs  client.rs  mod.rs  models.rs
crates/rocketchat2ruckchat/src/ruckchat/: auth.rs  client.rs  mod.rs  models.rs
crates/ruckchat-common/: Cargo.toml  README.md
crates/ruckchat-common/src/: error.rs  lib.rs  time.rs  validation.rs
crates/ruckchat-config/: Cargo.toml  README.md
crates/ruckchat-config/src/: lib.rs
crates/ruckchat-domain/: Cargo.toml
crates/ruckchat-domain/src/: audit_log.rs  channel.rs  channel_membership.rs  custom_emoji.rs  direct_message_conversation.rs  file.rs  lib.rs  message.rs  organization.rs  organization_membership.rs  organization_role.rs  organization_settings.rs  permission.rs  reaction.rs  repositories.rs  role.rs  role_permission.rs  server_settings.rs  session.rs  team.rs  team_membership.rs  team_room.rs  user.rs  web_push_subscription.rs
crates/ruckchat-id/: Cargo.toml  README.md
crates/ruckchat-id/src/: lib.rs
crates/ruckchat-plugin-sdk/: Cargo.toml
crates/ruckchat-plugin-sdk/src/: lib.rs
crates/ruckchat-spelling/: Cargo.toml  README.md
crates/ruckchat-spelling/dictionaries/: README.md
crates/ruckchat-spelling/src/: lib.rs
desktop/src-tauri/: Cargo.toml  build.rs  ruckchat.desktop  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
migrations/: Cargo.toml  README.md
migrations/migrations/: 20260721212015_baseline_schema.down.sql  20260721212015_baseline_schema.sql  20260722022945_users_email_unique.sql  20260722023615_sessions_token_hash_unique.down.sql  20260722023615_sessions_token_hash_unique.sql  20260722150000_web_push_subscriptions.up.sql  20260723113632_users_deactivated_at.down.sql  20260723113632_users_deactivated_at.up.sql  20260723113946_organization_roles_permissions.down.sql  20260723113946_organization_roles_permissions.up.sql  20260723114745_custom_emoji_teams.down.sql  20260723114745_custom_emoji_teams.up.sql  20260724040400_users_is_server_admin.down.sql  20260724040400_users_is_server_admin.up.sql  20260724040401_server_settings.up.sql  20260724040402_audit_log.down.sql  20260724040402_audit_log.up.sql  20260724040403_session_impersonated_by.down.sql  20260724040403_session_impersonated_by.up.sql  20260724100242_allow_registration.down.sql  20260724100242_allow_registration.up.sql  20260725000000_message_mentions.down.sql  20260725000000_message_mentions.up.sql
migrations/src/: lib.rs
migrations/tests/: schema.rs
server/: Cargo.toml  README.md  openapi.yaml
server/src/: error.rs  lib.rs  main.rs  migrate.rs  repositories.rs  services.rs  state.rs  testing.rs
server/src/handlers/: admin.rs  auth.rs  channel.rs  direct_message.rs  dto.rs  error.rs  file.rs  message.rs  mod.rs  organization.rs  plugins.rs  reaction.rs  server_admin.rs  spelling.rs  user.rs  web_assets.rs  web_push.rs
server/src/mcp/: handler.rs  mod.rs  resources.rs  server.rs  tools.rs
server/src/plugins/: bus.rs  host.rs  loader.rs  manager.rs  mod.rs
server/src/repositories/: audit_log.rs  channel.rs  channel_membership.rs  custom_emoji.rs  direct_message_conversation.rs  file.rs  message.rs  organization.rs  organization_membership.rs  organization_role.rs  organization_settings.rs  permission.rs  reaction.rs  role_permission.rs  server_settings.rs  session.rs  team.rs  team_membership.rs  team_room.rs  user.rs  web_push.rs
server/src/services/: admin.rs  audit.rs  auth.rs  authorization.rs  channel.rs  direct_message.rs  dto.rs  events.rs  file.rs  mcp.rs  message.rs  organization.rs  reaction.rs  server_admin.rs  server_settings.rs  spelling.rs  user.rs  web_push.rs
server/src/websocket/: bus.rs  handler.rs  manager.rs  mod.rs
server/tests/: admin.rs  auth.rs  channel.rs  direct_message.rs  file.rs  mcp.rs  message.rs  migrate.rs  organization.rs  plugins.rs  reaction.rs  server_admin.rs  services.rs  spelling.rs  user.rs  web_push.rs  websocket.rs
server/tests/common/: mod.rs
(+191 files in other folders)
