[workspace]
members = ["server", "crates/ruckchat-id", "crates/ruckchat-config", "crates/ruckchat-common", "crates/ruckchat-domain", "crates/ruckchat-plugin-sdk", "crates/rocketchat2ruckchat", "migrations", "desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.1-alpha-r2"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
authors = ["Brian Tafoya <btafoya@briantafoya.com>"]
repository = "https://github.com/btafoya/ruckchat"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "serde-human-readable"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
secrecy = { version = "0.10", features = ["serde"] }
regex = "1"
once_cell = "1"
async-trait = "0.1"
rmcp = { version = "2.2.0", features = ["server", "server-side-http", "transport-streamable-http-server"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
libloading = "0.8"
toml = "0.8"
yaml_serde = "0.10"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
