[package]
name = "ruckchat-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RuckChat REST API, WebSocket, and MCP server."
readme = "README.md"
keywords = ["ruckchat", "chat", "server"]
categories = ["web-programming"]

[dependencies]
ruckchat-id = { path = "../crates/ruckchat-id" }
ruckchat-common = { path = "../crates/ruckchat-common" }
ruckchat-config = { path = "../crates/ruckchat-config" }
ruckchat-domain = { path = "../crates/ruckchat-domain" }
ruckchat-plugin-sdk = { path = "../crates/ruckchat-plugin-sdk" }
ruckchat-migrations = { path = "../migrations" }
async-trait = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["ipnetwork", "json"] }
time = { workspace = true }
tokio = { workspace = true, features = ["signal", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
argon2 = "0.5"
hex = "0.4"
ipnetwork = "0.20"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
thiserror = { workspace = true }
url = "2"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
rmcp = { workspace = true }
libloading = { workspace = true }
toml = { workspace = true }
include_dir = "0.7"
clap = { version = "4", features = ["derive"] }
web-push = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = { version = "0.3.33", default-features = false, features = ["std", "sink"] }
http-body-util = "0.1"
bytes = "1"

[lints]
workspace = true
