[package]
name = "ruckchat-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration primitives and validation for RuckChat applications."
readme = "README.md"
keywords = ["ruckchat", "chat", "config"]
categories = ["config"]

[dependencies]
ruckchat-id = { path = "../ruckchat-id" }
ruckchat-common = { path = "../ruckchat-common" }
serde = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
yaml_serde = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
