[package]
name = "ruckchat-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Domain entities, value objects, and repository interfaces for RuckChat."
readme = "README.md"
keywords = ["ruckchat", "chat", "domain"]
categories = ["data-structures"]

[dependencies]
ruckchat-id = { path = "../ruckchat-id" }
ruckchat-common = { path = "../ruckchat-common" }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
