[package]
name = "ruckchat-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RuckChat desktop application."
readme = "../README.md"
keywords = ["ruckchat", "chat", "desktop", "tauri"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "ruckchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ruckchat-desktop"
path = "src/main.rs"

[lints]
workspace = true
